# kotlin-mls

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties.template  settings.gradle.kts
app/: build.gradle.kts  consumer-rules.pro
app/src/androidTest/java/space/zeroxv6/kotlin_mls/: ExampleInstrumentedTest.kt  SimpleMlsTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/space/zeroxv6/kotlin_mls/: MlsService.kt  MlsStorageEncryptor.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/space/zeroxv6/kotlin_mls/: ExampleUnitTest.kt  MlsServiceTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust_layer/: Cargo.toml
rust_layer/src/: lib.rs  openmls.udl
